SampleApp_25cG_C/SDK/CMMISDK_Api.h

	error_km KMAPI CMMISDK_Connect(const CMMISDK_Port* inPortInfo, int32_km* outInstrumentNo);
	error_km KMAPI CMMISDK_Disconnect(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_GetInstrumentInfo(int32_km inInstrumentNo, CMMISDK_InstrumentInfo* outInfo);
	error_km KMAPI CMMISDK_GetSDKVersion(CMMISDK_Version* version);
	error_km KMAPI CMMISDK_GetWarning(int32_km inInstrumentNo, CMMISDK_Warning* warning);
	error_km KMAPI CMMISDK_GetCalibrationStatus(int32_km inInstrumentNo, CMMISDK_CalStatus* outCalStatus);
	error_km KMAPI CMMISDK_PerformZeroCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformWhiteCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformGlossCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformUserCalibration(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PerformMeasurement(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_PollingMeasurement(int32_km inInstrumentNo, CMMISDK_MeasStatus* outStatus);
	error_km KMAPI CMMISDK_CancelMeasurement(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_ReadLatestDataSpec(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_ReadLatestDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, const CMMISDK_ColorCond *inColorCond, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_LoadLatestData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_GetLatestDataSpec(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_GetLatestDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, const CMMISDK_ColorCond *inColorCond, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetWhiteCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, int32_km inCalId, const CMMISDK_Data* inCalData);
	error_km KMAPI CMMISDK_GetWhiteCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, int32_km* outCalId, CMMISDK_Data* outCalData);
	error_km KMAPI CMMISDK_SetGlossCalibrationData(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, int32_km inCalId, float64_km inCalData);
	error_km KMAPI CMMISDK_GetGlossCalibrationData(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, int32_km* outCalId, float64_km* outCalData);
	error_km KMAPI CMMISDK_SetUserCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, const CMMISDK_UserCalId* inCalId, const CMMISDK_Data* inCalData);
	error_km KMAPI CMMISDK_GetUserCalibrationData(int32_km inInstrumentNo, CMMISDK_CalDataType inDataType, CMMISDK_UserCalId* outCalId, CMMISDK_Data* outCalData);
	error_km KMAPI CMMISDK_SetUserCalibrationEnable(int32_km inInstrumentNo, CMMISDK_OnOff inCalEnable);
	error_km KMAPI CMMISDK_GetUserCalibrationEnable(int32_km inInstrumentNo, CMMISDK_OnOff* outCalEnable);
	error_km KMAPI CMMISDK_SetTriggerMode(int32_km inInstrumentNo, CMMISDK_OnOff inTrigger);
	error_km KMAPI CMMISDK_GetTriggerMode(int32_km inInstrumentNo, CMMISDK_OnOff* outTrigger);
	error_km KMAPI CMMISDK_ClearTriggerData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_IsTriggerData(int32_km inInstrumentNo, CMMISDK_OnOff* outData);
	error_km KMAPI CMMISDK_GetZeroCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateType inType, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_GetWhiteCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_GetGlossCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_GetUserCalibrationDate(int32_km inInstrumentNo, CMMISDK_DateTime* outDate);
	error_km KMAPI CMMISDK_ClearUvAdjustInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SetProfileForUvAdjust(int32_km inInstrumentNo, const CMMISDK_Data* inData);
	error_km KMAPI CMMISDK_GetProfileForUvAdjust(int32_km inInstrumentNo, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetWiForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetWiForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetUserType(int32_km inInstrumentNo, CMMISDK_UserType inType);
	error_km KMAPI CMMISDK_GetUserType(int32_km inInstrumentNo, CMMISDK_UserType* outType);
	error_km KMAPI CMMISDK_SetAdminPassword(int32_km inInstrumentNo, const CMMISDK_AdminPass *inPass);
	error_km KMAPI CMMISDK_GetAdminPassword(int32_km inInstrumentNo, CMMISDK_AdminPass* outPass);
	error_km KMAPI CMMISDK_SetAutoPrint(int32_km inInstrumentNo, CMMISDK_OnOff inPrint);
	error_km KMAPI CMMISDK_GetAutoPrint(int32_km inInstrumentNo, CMMISDK_OnOff* outPrint);
	error_km KMAPI CMMISDK_SetBrightness(int32_km inInstrumentNo, int32_km inBrightness);
	error_km KMAPI CMMISDK_GetBrightness(int32_km inInstrumentNo, int32_km* outBrightness);
	error_km KMAPI CMMISDK_SetScreenDirection(int32_km inInstrumentNo, CMMISDK_ScreenDirection inScreenDirection);
	error_km KMAPI CMMISDK_GetScreenDirection(int32_km inInstrumentNo, CMMISDK_ScreenDirection* outScreenDirection);
	error_km KMAPI CMMISDK_SetSound(int32_km inInstrumentNo, CMMISDK_OnOff inSound);
	error_km KMAPI CMMISDK_GetSound(int32_km inInstrumentNo, CMMISDK_OnOff* outSound);
	error_km KMAPI CMMISDK_SetCalibrationInterval(int32_km inInstrumentNo, int32_km inInterval);
	error_km KMAPI CMMISDK_GetCalibrationInterval(int32_km inInstrumentNo, int32_km* outInterval);
	error_km KMAPI CMMISDK_SetAnnualCalibration(int32_km inInstrumentNo, CMMISDK_OnOff inCal);
	error_km KMAPI CMMISDK_GetAnnualCalibration(int32_km inInstrumentNo, CMMISDK_OnOff* outCal);
	error_km KMAPI CMMISDK_SetZeroCalibrationSkip(int32_km inInstrumentNo, CMMISDK_OnOff inSkip);
	error_km KMAPI CMMISDK_GetZeroCalibrationSkip(int32_km inInstrumentNo, CMMISDK_OnOff* outSkip);
	error_km KMAPI CMMISDK_SetDateTime(int32_km inInstrumentNo, const CMMISDK_DateTime *inDate);
	error_km KMAPI CMMISDK_SetDateFormat(int32_km inInstrumentNo, CMMISDK_DateFormat inFormat);
	error_km KMAPI CMMISDK_GetDateFormat(int32_km inInstrumentNo, CMMISDK_DateFormat* outFormat);
	error_km KMAPI CMMISDK_SetLanguage(int32_km inInstrumentNo, CMMISDK_Language inLanguage);
	error_km KMAPI CMMISDK_GetLanguage(int32_km inInstrumentNo, CMMISDK_Language* outLanguage);
	error_km KMAPI CMMISDK_SetPowerSaving(int32_km inInstrumentNo, int32_km inPowerSaving);
	error_km KMAPI CMMISDK_GetPowerSaving(int32_km inInstrumentNo, int32_km* outPowerSaving);
	error_km KMAPI CMMISDK_ClearJobInfo(int32_km inInstrumentNo, int32_km inJobNum);
	error_km KMAPI CMMISDK_SetJobInfo(int32_km inInstrumentNo, int32_km inJobNum, const CMMISDK_JobInfo* inInfo);
	error_km KMAPI CMMISDK_GetJobInfo(int32_km inInstrumentNo, int32_km inJobNum, CMMISDK_JobInfo* outInfo);
	error_km KMAPI CMMISDK_GetJobStepType(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, CMMISDK_JobStepType* outType);
	error_km KMAPI CMMISDK_SetJobStepForOperation(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, const CMMISDK_JobStepOperation* inOperation);
	error_km KMAPI CMMISDK_GetJobStepForOperation(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, CMMISDK_JobStepOperation* outOperation);
	error_km KMAPI CMMISDK_SetJobStepForResult(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, const CMMISDK_JobStepResult* inResult);
	error_km KMAPI CMMISDK_GetJobStepForResult(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, CMMISDK_JobStepResult* outResult);
	error_km KMAPI CMMISDK_SetJobImage(int32_km inInstrumentNo, int32_km inJobNum, int32_km inImageNum, const CMMISDK_JobImage* inImage);
	error_km KMAPI CMMISDK_GetJobImage(int32_km inInstrumentNo, int32_km inJobNum, int32_km inImageNum, CMMISDK_JobImage* outImage);
	error_km KMAPI CMMISDK_ResetSetting(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_ResetSettingAndData(int32_km inInstrumentNo);