SDK/CMMISDK_Parameters.h

//COM port information
struct CMMISDK_Port
{
	char   port_name[SIZE_PORTNAME];	//COM port name
};
//Spectrophotometer information
struct CMMISDK_InstrumentInfo
{
	int32_km     DataSize;								//Reflectance    Size of data (determined by minimum wavelength, maximum wavelength, and wavelength pitch)
	int32_km     WaveLengthStart;						//Reflectance    Wavelength range: Minimum wavelength
	int32_km     WaveLengthEnd;							//Reflectance    Wavelength range: Maximum wavelength
	int32_km     WaveLengthPitch;						//Reflectance    Wavelength range: Wavelength pitch
	int32_km     SerialNo;								//Serial number
	int32_km     VersionMajor;							//Product version (Major)
	int32_km     VersionMinor;							//Product version (Minor)
	int32_km     VersionFree;							//Product version (Free)
	char         InstrumentName[SIZE_INSTRUMENT_NAME];	//Product name
};
//Version information
struct CMMISDK_Version
{
	int32_km     major;	//Major
	int32_km     minor;	//Minor
	int32_km     free;	//Free
};
//Measurement data
struct CMMISDK_Data
{
	float64_km   data[SIZE_DATA];	//Data
};
//Color value calculation conditions
struct CMMISDK_ColorCond
{
	CMMISDK_Observer	obs;			//Observer
	CMMISDK_Illuminant	ill;			//Illuminant
	CMMISDK_ColorSpace	colorSpace;		//Color space
										//	*A value other than COLOR_MUNSELL_C can be specified with CMMISDK_ReadLatestDataColor.
										//	*Only L*a*b*, Hunter Lab, and XYZ can be specified with CMMISDK_SetTargetDataColor and CMMISDK_GetTargetDataColor.
};


//User calibration ID
struct CMMISDK_UserCalId
{
	char   id[SIZE_USERCAL_ID];	//ID
};
//Index data for fluorescence adjustment
struct CMMISDK_UvAdjustIndex
{
	float64_km   value;				//value
	float64_km   tolerance;			//Allowable width
};
//Date and time data
struct CMMISDK_DateTime
{
	int32_km     year;		//Year
	int32_km     month;		//Month
	int32_km     day;		//Day
	int32_km     hour;		//Hour
	int32_km     minute;	//Minute
	int32_km     second;	//Second
};
//Administrator password
struct CMMISDK_AdminPass
{
	char   password[SIZE_ADMIN_PASS];	//Administrator password
};
//Job information
struct CMMISDK_JobInfo
{
	int32_km		step_count;				//Number of steps to register for job
	CMMISDK_OnOff	step_loop;				//Repeat job on/off
	char			name[SIZE_JOB_NAME];	//Name
};


//Job operation step
struct CMMISDK_JobStepOperation
{
	int32_km					image_num;					//Image number
	CMMISDK_MeasType			meas_type;					//Measurement type
	CMMISDK_MeasMode			meas_mode;					//Measurement mode
	CMMISDK_MeasArea			meas_area;					//Measurement area
	CMMISDK_MeasAngle			meas_angle;					//Measurement angle
	CMMISDK_LightDirection		meas_ldirection;			//Irradiation direction
	CMMISDK_SpecularComponent	meas_scie;					//Specular component
	CMMISDK_Uv					meas_uv;					//UV condition
	int32_km					auto_ave_times;				//Auto average count
	int32_km					manu_ave_times;				//Manual average count
	int32_km					relation_target;			//Related target number
	CMMISDK_OnOff				enable_meas;				//Display measurement button on/off
	CMMISDK_OnOff				enable_prev;				//Display previous button on/off
	CMMISDK_OnOff				enable_next;				//Display next button on/off
	CMMISDK_OnOff				enable_end;					//Display end button on/off
	char						name[SIZE_DATANAME];		//Name
	char						comment[SIZE_JOB_COMMENT];	//Comment
};


//Job result step
struct CMMISDK_JobStepResult
{
	CMMISDK_SpecularComponent	meas_scie;				//Specular component
	CMMISDK_Observer			obs1;					//Observer 1
	CMMISDK_Observer			obs2;					//Observer 2
	CMMISDK_Illuminant			ill1;					//Illuminant 1
	CMMISDK_Illuminant			ill2;					//Illuminant 2
	CMMISDK_CustomIndex			index[SIZE_JOB_INDEX];	//Custom items
	CMMISDK_OnOff				enable_meas;			//Display measurement button on/off
	CMMISDK_OnOff				enable_prev;			//Display previous button on/off
	CMMISDK_OnOff				enable_next;			//Display next button on/off
	CMMISDK_OnOff				enable_end;				//Display end button on/off
};