SampleApp_25cG_CS_C/SampleApp/SDK/CMMISDK_API.cs

        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetUserType(Int32 inInstrumentNo, CMMISDK_UserType inType);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetUserType(Int32 inInstrumentNo, ref CMMISDK_UserType outType);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetAdminPassword(Int32 inInstrumentNo, ref CMMISDK_AdminPass inPass);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetAdminPassword(Int32 inInstrumentNo, ref CMMISDK_AdminPass outPass);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetAutoPrint(Int32 inInstrumentNo, CMMISDK_OnOff inPrint);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetAutoPrint(Int32 inInstrumentNo, ref CMMISDK_OnOff outPrint);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetBrightness(Int32 inInstrumentNo, Int32 inBrightness);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetBrightness(Int32 inInstrumentNo, ref Int32 outBrightness);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetScreenDirection(Int32 inInstrumentNo, CMMISDK_ScreenDirection inScreenDirection);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetScreenDirection(Int32 inInstrumentNo, ref CMMISDK_ScreenDirection outScreenDirection);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetSound(Int32 inInstrumentNo, CMMISDK_OnOff inSound);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetSound(Int32 inInstrumentNo, ref CMMISDK_OnOff outSound);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetCalibrationInterval(Int32 inInstrumentNo, Int32 inInterval);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetCalibrationInterval(Int32 inInstrumentNo, ref Int32 outInterval);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetAnnualCalibration(Int32 inInstrumentNo, CMMISDK_OnOff inCal);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetAnnualCalibration(Int32 inInstrumentNo, ref CMMISDK_OnOff outCal);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetZeroCalibrationSkip(Int32 inInstrumentNo, CMMISDK_OnOff inSkip);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetZeroCalibrationSkip(Int32 inInstrumentNo, ref CMMISDK_OnOff outSkip);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetDateTime(Int32 inInstrumentNo, ref CMMISDK_DateTime inDate);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetDateFormat(Int32 inInstrumentNo, CMMISDK_DateFormat inFormat);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetDateFormat(Int32 inInstrumentNo, ref CMMISDK_DateFormat outFormat);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetLanguage(Int32 inInstrumentNo, CMMISDK_Language inLanguage);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetLanguage(Int32 inInstrumentNo, ref CMMISDK_Language outLanguage);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetPowerSaving(Int32 inInstrumentNo, Int32 inPowerSaving);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetPowerSaving(Int32 inInstrumentNo, ref Int32 outPowerSaving);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ClearJobInfo(Int32 inInstrumentNo, Int32 inJobNum);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetJobInfo(Int32 inInstrumentNo, Int32 inJobNum, ref CMMISDK_JobInfo inInfo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetJobInfo(Int32 inInstrumentNo, Int32 inJobNum, ref CMMISDK_JobInfo outInfo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetJobStepType(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepType outType);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetJobStepForOperation(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepOperation inOperation);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetJobStepForOperation(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepOperation outOperation);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetJobStepForResult(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepResult inResult);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetJobStepForResult(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepResult outResult);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_SetJobImage(Int32 inInstrumentNo, Int32 inJobNum, Int32 inImageNum, IntPtr inImage);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_GetJobImage(Int32 inInstrumentNo, Int32 inJobNum, Int32 inImageNum, IntPtr outImage);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ResetSetting(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x86.dll")]
        extern public static Int32 CMMISDK_ResetSettingAndData(Int32 inInstrumentNo);
    }
    class CMMISDK_API_x64
    {
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_Connect(ref CMMISDK_Port inPortInfo, ref Int32 outInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_Disconnect(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetInstrumentInfo(Int32 inInstrumentNo, ref CMMISDK_InstrumentInfo outInfo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetSDKVersion(ref CMMISDK_Version version);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetWarning(Int32 inInstrumentNo, ref CMMISDK_Warning warning);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetCalibrationStatus(Int32 inInstrumentNo, ref CMMISDK_CalStatus outCalStatus);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PerformZeroCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PerformWhiteCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PerformGlossCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PerformUserCalibration(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PerformMeasurement(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PollingMeasurement(Int32 inInstrumentNo, ref CMMISDK_MeasStatus outStatus);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_CancelMeasurement(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ReadLatestDataSpec(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ReadLatestDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_ColorCond inColorCond, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_LoadLatestData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetLatestDataSpec(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetLatestDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_ColorCond inColorCond, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetWhiteCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, Int32 inCalId, ref CMMISDK_Data inCalData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetWhiteCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, ref Int32 outCalId, ref CMMISDK_Data outCalData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetGlossCalibrationData(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, Int32 inCalId, double inCalData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetGlossCalibrationData(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, ref Int32 outCalId, ref double outCalData);//Scriptと違うので注意
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetUserCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, ref CMMISDK_UserCalId inCalId, ref CMMISDK_Data inCalData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetUserCalibrationData(Int32 inInstrumentNo, CMMISDK_CalDataType inDataType, ref CMMISDK_UserCalId outCalId, ref CMMISDK_Data outCalData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetUserCalibrationEnable(Int32 inInstrumentNo, CMMISDK_OnOff inCalEnable);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetUserCalibrationEnable(Int32 inInstrumentNo, ref CMMISDK_OnOff outCalEnable);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTriggerMode(Int32 inInstrumentNo, CMMISDK_OnOff inTrigger);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTriggerMode(Int32 inInstrumentNo, ref CMMISDK_OnOff outTrigger);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ClearTriggerData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_IsTriggerData(Int32 inInstrumentNo, ref CMMISDK_OnOff outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetZeroCalibrationDate(Int32 inInstrumentNo, CMMISDK_DateType inType, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetWhiteCalibrationDate(Int32 inInstrumentNo, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetGlossCalibrationDate(Int32 inInstrumentNo, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetUserCalibrationDate(Int32 inInstrumentNo, ref CMMISDK_DateTime outDate);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ClearUvAdjustInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_SetProfileForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_Data inData);
		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_GetProfileForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_Data outData);
		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_SetWiForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex inData);
		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_GetWiForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex outData);
